updated main file #004

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>JS Bin</title>
+    <title>Namensfinder</title>
 
     <style type="text/css">
         body {
@@ -17,6 +17,9 @@
             font-weight: bold;
             color: rgb(255, 255, 255);
             flex-grow: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         body,
@@ -39,6 +42,9 @@
             padding: 12px;
             text-align: center;
             width: 100%;
+
+            /* non- selectable */
+
             -webkit-user-select: none;
             /* Chrome all / Safari all */
             -moz-user-select: none;
@@ -47,6 +53,8 @@
             /* IE 10+ */
             user-select: none;
             /* Likely future */
+
+            /* non- selectable */
         }
     </style>
 </head>
