--- a/jsbin-mittippe_1.html
+++ b/jsbin-mittippe_1.html
@@ -1,18 +1,41 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>JS Bin</title>
+  <style>
+  </style>
 </head>
-
 <body>
 
-    <script>
+<script>
+  var name = 'Lisa Müller';
+  var number = 10;
+  var decimals = 10.11;
+  var nullValue = null;
+  var undefinedValue = undefined;
 
-    
+  var nameList = ['Lisa Müller', 'Horst Schröder', null, 0];
 
+  var person = {
+    "name": "Lisa",
+    "age": 19,
+    "gender": "w",
+    "friends": [
+      {
+        "name": "Peter"
+      },
+      {
+        "name": "Petra"
+      },
+      {
+        "name": "Sarah"
+      }
+    ],
+  };
 
-
-    </script>
+  document.body.innerHTML = person.friends[2].name;
+</script>
 </body>
-
 </html>
